[package]
name = "wlls"
version = "0.1.0"
edition = "2024"
description = "List Obsidian wikilinks recursively"
license = "BSD-2-Clause-Patent"
readme = "README.md"
homepage = "https://github.com/dgcnz/wlls"
repository = "https://github.com/dgcnz/wlls"
keywords = ["obsidian", "quartz", "wikilink", "export", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
ignore = "0.4.25"
pulldown-cmark = "0.13.0"
regex = "1.12.2"
snafu = "0.8.9"
unicode-normalization = "0.1.23"
